--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <!-- 文章将通过 JavaScript 动态加载 -->
             </div>
             <div class="center-button">
-                <a href="/posts" class="btn">查看所有文章</a>
+                <a href="/posts/" class="btn">查看所有文章</a>
             </div>
         </section>
 
