--- a/index.html
+++ b/index.html
@@ -550,7 +550,54 @@
         <section class="skills">
             <h2>技能专长</h2>
             <div class="skills-grid">
-                <!-- 技能卡片将通过 JavaScript 动态加载 -->
+                <div class="skill-card">
+                    <i class="fa-brands fa-js"></i>
+                    <h3>JavaScript</h3>
+                    <p>熟练掌握现代JavaScript，包括ES6+特性、异步编程、模块化开发等</p>
+                    <div class="skill-level">
+                        <div class="skill-progress" style="width: 90%"></div>
+                    </div>
+                </div>
+                <div class="skill-card">
+                    <i class="fa-brands fa-react"></i>
+                    <h3>React</h3>
+                    <p>熟悉React生态系统，包括Hooks、Redux、React Router等</p>
+                    <div class="skill-level">
+                        <div class="skill-progress" style="width: 85%"></div>
+                    </div>
+                </div>
+                <div class="skill-card">
+                    <i class="fa-brands fa-node-js"></i>
+                    <h3>Node.js</h3>
+                    <p>掌握Node.js后端开发，包括Express、数据库集成等</p>
+                    <div class="skill-level">
+                        <div class="skill-progress" style="width: 80%"></div>
+                    </div>
+                </div>
+                <div class="skill-card">
+                    <i class="fa-solid fa-database"></i>
+                    <h3>数据库</h3>
+                    <p>熟练使用MySQL、MongoDB等数据库，了解数据库设计和优化</p>
+                    <div class="skill-level">
+                        <div class="skill-progress" style="width: 75%"></div>
+                    </div>
+                </div>
+                <div class="skill-card">
+                    <i class="fa-brands fa-python"></i>
+                    <h3>Python</h3>
+                    <p>掌握Python编程，包括数据分析、网络爬虫等应用开发</p>
+                    <div class="skill-level">
+                        <div class="skill-progress" style="width: 85%"></div>
+                    </div>
+                </div>
+                <div class="skill-card">
+                    <i class="fa-solid fa-cloud"></i>
+                    <h3>云服务</h3>
+                    <p>熟悉云服务部署，包括Docker容器化、CI/CD等</p>
+                    <div class="skill-level">
+                        <div class="skill-progress" style="width: 70%"></div>
+                    </div>
+                </div>
             </div>
         </section>
     </main>
