--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
             --card-bg: #f8fafc;
             --nav-height: 4rem;
             --transition: all 0.3s ease;
+            --hero-bg-start: #f6f8ff;
+            --hero-bg-end: #f0f4ff;
+            --hero-overlay: rgba(37, 99, 235, 0.1);
         }
 
         [data-theme="dark"] {
@@ -24,6 +27,9 @@
             --text-color: #f3f4f6;
             --bg-color: #111827;
             --card-bg: #1f2937;
+            --hero-bg-start: #1a237e;
+            --hero-bg-end: #0d1b3e;
+            --hero-overlay: rgba(96, 165, 250, 0.1);
         }
 
         * {
@@ -123,7 +129,10 @@
             align-items: center;
             justify-content: center;
             text-align: center;
-            background: linear-gradient(135deg, #f6f8ff 0%, #f0f4ff 100%);
+            background: linear-gradient(135deg, 
+                var(--hero-bg-start) 0%, 
+                var(--hero-bg-end) 100%
+            );
             color: var(--text-color);
             position: relative;
             overflow: hidden;
@@ -136,7 +145,11 @@
             left: 0;
             right: 0;
             bottom: 0;
-            background: radial-gradient(circle at 50% 50%, rgba(37, 99, 235, 0.1) 0%, transparent 50%);
+            background: radial-gradient(
+                circle at 50% 50%, 
+                var(--hero-overlay) 0%, 
+                transparent 50%
+            );
             animation: pulse 8s ease-in-out infinite;
         }
 
