--- a/index.html
+++ b/index.html
@@ -565,50 +565,50 @@
             <div class="skills-grid">
                 <div class="skill-card">
                     <i class="fa-brands fa-js"></i>
-                    <h3>JavaScript</h3>
-                    <p>熟练掌握现代JavaScript，包括ES6+特性、异步编程、模块化开发等</p>
+                    <h3>前端开发</h3>
+                    <p>精通现代前端技术栈，包括JavaScript/TypeScript、Vue3生态系统、Vite构建工具等</p>
                     <div class="skill-level">
                         <div class="skill-progress" style="width: 90%"></div>
                     </div>
                 </div>
                 <div class="skill-card">
-                    <i class="fa-brands fa-react"></i>
-                    <h3>React</h3>
-                    <p>熟悉React生态系统，包括Hooks、Redux、React Router等</p>
+                    <i class="fa-brands fa-python"></i>
+                    <h3>Python全栈</h3>
+                    <p>熟练使用Django及REST框架进行后端开发，掌握数据分析和网络爬虫技术</p>
                     <div class="skill-level">
                         <div class="skill-progress" style="width: 85%"></div>
                     </div>
                 </div>
                 <div class="skill-card">
-                    <i class="fa-brands fa-node-js"></i>
-                    <h3>Node.js</h3>
-                    <p>掌握Node.js后端开发，包括Express、数据库集成等</p>
-                    <div class="skill-level">
-                        <div class="skill-progress" style="width: 80%"></div>
-                    </div>
-                </div>
-                <div class="skill-card">
                     <i class="fa-solid fa-database"></i>
-                    <h3>数据库</h3>
-                    <p>熟练使用MySQL、MongoDB等数据库，了解数据库设计和优化</p>
-                    <div class="skill-level">
-                        <div class="skill-progress" style="width: 75%"></div>
-                    </div>
-                </div>
-                <div class="skill-card">
-                    <i class="fa-brands fa-python"></i>
-                    <h3>Python</h3>
-                    <p>掌握Python编程，包括数据分析、网络爬虫等应用开发</p>
+                    <h3>数据库与缓存</h3>
+                    <p>精通MySQL数据库设计与优化，熟练使用Redis缓存系统和Celery任务队列</p>
                     <div class="skill-level">
                         <div class="skill-progress" style="width: 85%"></div>
                     </div>
                 </div>
                 <div class="skill-card">
                     <i class="fa-solid fa-cloud"></i>
-                    <h3>云服务</h3>
-                    <p>熟悉云服务部署，包括Docker容器化、CI/CD等</p>
+                    <h3>DevOps</h3>
+                    <p>熟练配置云服务器，掌握Docker容器化部署，具备完整项目部署运维经验</p>
                     <div class="skill-level">
-                        <div class="skill-progress" style="width: 70%"></div>
+                        <div class="skill-progress" style="width: 80%"></div>
+                    </div>
+                </div>
+                <div class="skill-card">
+                    <i class="fa-solid fa-robot"></i>
+                    <h3>AIGC开发</h3>
+                    <p>具备AI应用开发经验，包括PPT智能转换、文档生成等，了解模型微调技术</p>
+                    <div class="skill-level">
+                        <div class="skill-progress" style="width: 75%"></div>
+                    </div>
+                </div>
+                <div class="skill-card">
+                    <i class="fa-brands fa-css3"></i>
+                    <h3>UI/UX开发</h3>
+                    <p>精通CSS和现代前端样式开发，能够实现响应式设计和优秀的用户体验</p>
+                    <div class="skill-level">
+                        <div class="skill-progress" style="width: 85%"></div>
                     </div>
                 </div>
             </div>
