--- a/index.html
+++ b/index.html
@@ -16,9 +16,6 @@
             --card-bg: #f8fafc;
             --nav-height: 4rem;
             --transition: all 0.3s ease;
-            --hero-bg-start: #f6f8ff;
-            --hero-bg-end: #f0f4ff;
-            --hero-overlay: rgba(37, 99, 235, 0.1);
         }
 
         [data-theme="dark"] {
@@ -27,9 +24,6 @@
             --text-color: #f3f4f6;
             --bg-color: #111827;
             --card-bg: #1f2937;
-            --hero-bg-start: #1a237e;
-            --hero-bg-end: #0d1b3e;
-            --hero-overlay: rgba(96, 165, 250, 0.1);
         }
 
         * {
@@ -129,11 +123,8 @@
             align-items: center;
             justify-content: center;
             text-align: center;
-            background: linear-gradient(135deg, 
-                var(--hero-bg-start) 0%, 
-                var(--hero-bg-end) 100%
-            );
-            color: var(--text-color);
+            background: linear-gradient(135deg, var(--primary-color), var(--secondary-color));
+            color: white;
             position: relative;
             overflow: hidden;
         }
@@ -145,12 +136,9 @@
             left: 0;
             right: 0;
             bottom: 0;
-            background: radial-gradient(
-                circle at 50% 50%, 
-                var(--hero-overlay) 0%, 
-                transparent 50%
-            );
-            animation: pulse 8s ease-in-out infinite;
+            background: url('assets/images/hero-pattern.svg');
+            opacity: 0.1;
+            animation: moveBackground 20s linear infinite;
         }
 
         .hero-content {
@@ -162,85 +150,55 @@
         }
 
         .hero h1 {
-            font-size: 4.5rem;
+            font-size: 3.5rem;
             margin-bottom: 1rem;
             line-height: 1.2;
-            background: linear-gradient(135deg, var(--primary-color), var(--secondary-color));
-            -webkit-background-clip: text;
-            background-clip: text;
-            -webkit-text-fill-color: transparent;
-            font-weight: 800;
         }
 
         .hero p {
-            font-size: 1.8rem;
-            opacity: 0.8;
-            margin-top: 1rem;
-            font-weight: 300;
+            font-size: 1.5rem;
+            opacity: 0.9;
         }
 
         /* 最新文章区域 */
         .recent-posts {
-            padding: 6rem 2rem;
-            background: var(--bg-color);
+            padding: 4rem 1rem;
+            max-width: 1200px;
+            margin: 0 auto;
         }
 
         .recent-posts h2 {
             text-align: center;
-            font-size: 2.5rem;
             margin-bottom: 3rem;
-            color: var(--text-color);
-            position: relative;
-            display: inline-block;
-            left: 50%;
-            transform: translateX(-50%);
-        }
-
-        .recent-posts h2::after {
-            content: '';
-            position: absolute;
-            bottom: -10px;
-            left: 50%;
-            transform: translateX(-50%);
-            width: 50px;
-            height: 3px;
-            background: var(--primary-color);
-            border-radius: 2px;
+            font-size: 2.5rem;
+            color: var(--primary-color);
         }
 
         .posts-grid {
             display: grid;
             grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
             gap: 2rem;
-            max-width: 1200px;
-            margin: 0 auto;
-            padding: 0 1rem;
+            margin-bottom: 3rem;
         }
 
         .post-card {
             background: var(--card-bg);
             border-radius: 1rem;
             overflow: hidden;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
             transition: var(--transition);
-            opacity: 0;
-            transform: translateY(20px);
+            box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+            animation: fadeIn 0.5s ease;
         }
 
         .post-card:hover {
             transform: translateY(-5px);
-            box-shadow: 0 8px 12px rgba(0, 0, 0, 0.15);
+            box-shadow: 0 8px 12px rgba(0,0,0,0.15);
         }
 
         .post-card img {
             width: 100%;
             height: 200px;
             object-fit: cover;
-            transition: var(--transition);
-        }
-
-        .post-card:hover img {
-            transform: scale(1.05);
         }
 
         .post-content {
@@ -248,139 +206,76 @@
         }
 
         .post-content h3 {
-            font-size: 1.25rem;
             margin-bottom: 0.5rem;
             color: var(--text-color);
-            font-weight: 600;
         }
 
         .post-content .date {
-            font-size: 0.875rem;
-            color: var(--text-color);
-            opacity: 0.7;
-            margin-bottom: 0.75rem;
-        }
-
-        .post-content p {
-            color: var(--text-color);
-            opacity: 0.9;
-            line-height: 1.6;
+            color: var(--secondary-color);
+            font-size: 0.9rem;
             margin-bottom: 1rem;
         }
 
-        .center-button {
-            text-align: center;
-            margin-top: 3rem;
+        /* 技能展示区域 */
+        .skills {
+            background: var(--card-bg);
+            padding: 4rem 1rem;
         }
 
+        .skills h2 {
+            text-align: center;
+            margin-bottom: 3rem;
+            font-size: 2.5rem;
+            color: var(--primary-color);
+        }
+
+        .skills-grid {
+            max-width: 1200px;
+            margin: 0 auto;
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+            gap: 2rem;
+        }
+
+        .skill-card {
+            background: var(--bg-color);
+            padding: 2rem;
+            border-radius: 1rem;
+            text-align: center;
+            transition: var(--transition);
+            box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+            animation: fadeIn 0.5s ease;
+        }
+
+        .skill-card:hover {
+            transform: translateY(-5px);
+            box-shadow: 0 8px 12px rgba(0,0,0,0.15);
+        }
+
+        .skill-card i {
+            font-size: 3rem;
+            color: var(--primary-color);
+            margin-bottom: 1rem;
+        }
+
+        /* 按钮样式 */
         .btn {
             display: inline-block;
-            padding: 0.8rem 2rem;
+            padding: 1rem 2rem;
             background: var(--primary-color);
             color: white;
             text-decoration: none;
-            border-radius: 2rem;
+            border-radius: 0.5rem;
             transition: var(--transition);
-            font-weight: 500;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
         }
 
         .btn:hover {
             background: var(--secondary-color);
             transform: translateY(-2px);
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
         }
 
-        /* 技能展示区域 */
-        .skills {
-            padding: 6rem 2rem;
-            background: var(--card-bg);
-        }
-
-        .skills h2 {
+        .center-button {
             text-align: center;
-            font-size: 2.5rem;
-            margin-bottom: 3rem;
-            color: var(--text-color);
-            position: relative;
-            display: inline-block;
-            left: 50%;
-            transform: translateX(-50%);
-        }
-
-        .skills h2::after {
-            content: '';
-            position: absolute;
-            bottom: -10px;
-            left: 50%;
-            transform: translateX(-50%);
-            width: 50px;
-            height: 3px;
-            background: var(--primary-color);
-            border-radius: 2px;
-        }
-
-        .skills-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-            gap: 2rem;
-            max-width: 1200px;
-            margin: 0 auto;
-            padding: 0 1rem;
-        }
-
-        .skill-card {
-            background: var(--bg-color);
-            border-radius: 1rem;
-            padding: 2rem;
-            text-align: center;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-            transition: var(--transition);
-            opacity: 0;
-            transform: translateY(20px);
-        }
-
-        .skill-card:hover {
-            transform: translateY(-5px);
-            box-shadow: 0 8px 12px rgba(0, 0, 0, 0.15);
-        }
-
-        .skill-card i {
-            font-size: 3rem;
-            margin-bottom: 1rem;
-            color: var(--primary-color);
-            transition: var(--transition);
-        }
-
-        .skill-card:hover i {
-            transform: scale(1.1);
-        }
-
-        .skill-card h3 {
-            font-size: 1.5rem;
-            margin-bottom: 1rem;
-            color: var(--text-color);
-        }
-
-        .skill-card p {
-            color: var(--text-color);
-            opacity: 0.8;
-            line-height: 1.6;
-        }
-
-        .skill-level {
-            margin-top: 1rem;
-            height: 6px;
-            background: var(--card-bg);
-            border-radius: 3px;
-            overflow: hidden;
-        }
-
-        .skill-progress {
-            height: 100%;
-            background: linear-gradient(90deg, var(--primary-color), var(--secondary-color));
-            border-radius: 3px;
-            transition: width 1s ease-in-out;
         }
 
         /* 页脚样式 */
@@ -498,22 +393,6 @@
             padding: 1rem;
             box-shadow: 0 2px 4px rgba(0,0,0,0.1);
         }
-
-        /* 添加新的动画 */
-        @keyframes pulse {
-            0% {
-                transform: scale(1);
-                opacity: 0.5;
-            }
-            50% {
-                transform: scale(1.05);
-                opacity: 0.8;
-            }
-            100% {
-                transform: scale(1);
-                opacity: 0.5;
-            }
-        }
     </style>
 </head>
 <body>
@@ -543,8 +422,8 @@
         <!-- 英雄区域 -->
         <section class="hero">
             <div class="hero-content">
-                <h1>Diarina</h1>
-                <p>欢迎来到 Diarina</p>
+                <h1>欢迎来到我的博客</h1>
+                <p>分享技术见解，记录学习历程</p>
             </div>
         </section>
 
@@ -619,15 +498,78 @@
     <footer>
         <div class="footer-content">
             <div class="social-links">
-                <a href="https://github.com/guoyuhou" target="_blank"><i class="fab fa-github"></i></a>
+                <a href="https://github.com/yourusername" target="_blank"><i class="fab fa-github"></i></a>
                 <!-- 添加其他社交体链接 -->
             </div>
             <p>&copy; 2024 Diarina. All rights reserved.</p>
         </div>
     </footer>
 
-    <script src="assets/js/post-manager.js"></script>
-    <script src="assets/js/home.js"></script>
-    <script src="assets/js/main.js"></script>
+    <script>
+        // 主题切换
+        document.addEventListener('DOMContentLoaded', function() {
+            const themeToggle = document.querySelector('.theme-toggle');
+            const prefersDarkScheme = window.matchMedia('(prefers-color-scheme: dark)');
+            
+            // 检查本地存储的主题设置
+            const currentTheme = localStorage.getItem('theme');
+            if (currentTheme) {
+                document.body.setAttribute('data-theme', currentTheme);
+                themeToggle.querySelector('i').classList.toggle('fa-sun', currentTheme === 'dark');
+                themeToggle.querySelector('i').classList.toggle('fa-moon', currentTheme === 'light');
+            } else if (prefersDarkScheme.matches) {
+                document.body.setAttribute('data-theme', 'dark');
+                themeToggle.querySelector('i').classList.add('fa-sun');
+            }
+
+            // 主题切换事件
+            themeToggle.addEventListener('click', () => {
+                const isDark = document.body.getAttribute('data-theme') === 'dark';
+                document.body.setAttribute('data-theme', isDark ? 'light' : 'dark');
+                localStorage.setItem('theme', isDark ? 'light' : 'dark');
+                themeToggle.querySelector('i').classList.toggle('fa-sun');
+                themeToggle.querySelector('i').classList.toggle('fa-moon');
+            });
+        });
+
+        // 移动端菜单
+        document.querySelector('.mobile-menu').addEventListener('click', function() {
+            this.classList.toggle('active');
+            document.querySelector('.nav-links').classList.toggle('active');
+        });
+
+        // 技能卡片数据
+        const skills = [
+            { icon: 'fa-brands fa-html5', name: 'HTML5', description: '现代化的HTML5开发' },
+            { icon: 'fa-brands fa-css3-alt', name: 'CSS3', description: '响应式设计与动画' },
+            { icon: 'fa-brands fa-js', name: 'JavaScript', description: '现代JavaScript开发' },
+            { icon: 'fa-brands fa-react', name: 'React', description: '前端框架开发' }
+        ];
+
+        // 渲染技能卡片
+        document.addEventListener('DOMContentLoaded', function() {
+            const skillsGrid = document.querySelector('.skills-grid');
+            skillsGrid.innerHTML = skills.map(skill => `
+                <div class="skill-card">
+                    <i class="${skill.icon}"></i>
+                    <h3>${skill.name}</h3>
+                    <p>${skill.description}</p>
+                </div>
+            `).join('');
+        });
+
+        // 滚动动画
+        document.addEventListener('scroll', function() {
+            const cards = document.querySelectorAll('.post-card, .skill-card');
+            cards.forEach(card => {
+                const cardTop = card.getBoundingClientRect().top;
+                const windowHeight = window.innerHeight;
+                if (cardTop < windowHeight * 0.9) {
+                    card.style.opacity = '1';
+                    card.style.transform = 'translateY(0)';
+                }
+            });
+        });
+    </script>
 </body>
 </html>
