--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
             --card-bg: #f8fafc;
             --nav-height: 4rem;
             --transition: all 0.3s ease;
+            --hero-bg-start: #f6f8ff;
+            --hero-bg-end: #f0f4ff;
+            --hero-overlay: rgba(37, 99, 235, 0.1);
         }
 
         [data-theme="dark"] {
@@ -24,6 +27,9 @@
             --text-color: #f3f4f6;
             --bg-color: #111827;
             --card-bg: #1f2937;
+            --hero-bg-start: #1a237e;
+            --hero-bg-end: #0d1b3e;
+            --hero-overlay: rgba(96, 165, 250, 0.1);
         }
 
         * {
@@ -123,8 +129,11 @@
             align-items: center;
             justify-content: center;
             text-align: center;
-            background: linear-gradient(135deg, var(--primary-color), var(--secondary-color));
-            color: white;
+            background: linear-gradient(135deg, 
+                var(--hero-bg-start) 0%, 
+                var(--hero-bg-end) 100%
+            );
+            color: var(--text-color);
             position: relative;
             overflow: hidden;
         }
@@ -136,9 +145,12 @@
             left: 0;
             right: 0;
             bottom: 0;
-            background: url('assets/images/hero-pattern.svg');
-            opacity: 0.1;
-            animation: moveBackground 20s linear infinite;
+            background: radial-gradient(
+                circle at 50% 50%, 
+                var(--hero-overlay) 0%, 
+                transparent 50%
+            );
+            animation: pulse 8s ease-in-out infinite;
         }
 
         .hero-content {
@@ -442,54 +454,7 @@
         <section class="skills">
             <h2>技能专长</h2>
             <div class="skills-grid">
-                <div class="skill-card">
-                    <i class="fa-brands fa-js"></i>
-                    <h3>前端开发</h3>
-                    <p>精通现代前端技术栈，包括JavaScript/TypeScript、Vue3生态系统、Vite构建工具等</p>
-                    <div class="skill-level">
-                        <div class="skill-progress" style="width: 90%"></div>
-                    </div>
-                </div>
-                <div class="skill-card">
-                    <i class="fa-brands fa-python"></i>
-                    <h3>Python全栈</h3>
-                    <p>熟练使用Django及REST框架进行后端开发，掌握数据分析和网络爬虫技术</p>
-                    <div class="skill-level">
-                        <div class="skill-progress" style="width: 85%"></div>
-                    </div>
-                </div>
-                <div class="skill-card">
-                    <i class="fa-solid fa-database"></i>
-                    <h3>数据库与缓存</h3>
-                    <p>精通MySQL数据库设计与优化，熟练使用Redis缓存系统和Celery任务队列</p>
-                    <div class="skill-level">
-                        <div class="skill-progress" style="width: 85%"></div>
-                    </div>
-                </div>
-                <div class="skill-card">
-                    <i class="fa-solid fa-cloud"></i>
-                    <h3>DevOps</h3>
-                    <p>熟练配置云服务器，掌握Docker容器化部署，具备完整项目部署运维经验</p>
-                    <div class="skill-level">
-                        <div class="skill-progress" style="width: 80%"></div>
-                    </div>
-                </div>
-                <div class="skill-card">
-                    <i class="fa-solid fa-robot"></i>
-                    <h3>AIGC开发</h3>
-                    <p>具备AI应用开发经验，包括PPT智能转换、文档生成等，了解模型微调技术</p>
-                    <div class="skill-level">
-                        <div class="skill-progress" style="width: 75%"></div>
-                    </div>
-                </div>
-                <div class="skill-card">
-                    <i class="fa-brands fa-css3"></i>
-                    <h3>UI/UX开发</h3>
-                    <p>精通CSS和现代前端样式开发，能够实现响应式设计和优秀的用户体验</p>
-                    <div class="skill-level">
-                        <div class="skill-progress" style="width: 85%"></div>
-                    </div>
-                </div>
+                <!-- 技能卡片将通过 JavaScript 动态加载 -->
             </div>
         </section>
     </main>
