--- a/index.html
+++ b/index.html
@@ -434,8 +434,8 @@
         <!-- 英雄区域 -->
         <section class="hero">
             <div class="hero-content">
-                <h1>欢迎来到我的博客</h1>
-                <p>分享技术见解，记录学习历程</p>
+                <h1>Diarina</h1>
+                <p>欢迎来到Diarina的博客</p>
             </div>
         </section>
 
@@ -454,7 +454,54 @@
         <section class="skills">
             <h2>技能专长</h2>
             <div class="skills-grid">
-                <!-- 技能卡片将通过 JavaScript 动态加载 -->
+                <div class="skill-card">
+                    <i class="fa-brands fa-js"></i>
+                    <h3>前端开发</h3>
+                    <p>精通现代前端技术栈，包括JavaScript/TypeScript、Vue3生态系统、Vite构建工具等</p>
+                    <div class="skill-level">
+                        <div class="skill-progress" style="width: 90%"></div>
+                    </div>
+                </div>
+                <div class="skill-card">
+                    <i class="fa-brands fa-python"></i>
+                    <h3>Python全栈</h3>
+                    <p>熟练使用Django及REST框架进行后端开发，掌握数据分析和网络爬虫技术</p>
+                    <div class="skill-level">
+                        <div class="skill-progress" style="width: 85%"></div>
+                    </div>
+                </div>
+                <div class="skill-card">
+                    <i class="fa-solid fa-database"></i>
+                    <h3>数据库与缓存</h3>
+                    <p>精通MySQL数据库设计与优化，熟练使用Redis缓存系统和Celery任务队列</p>
+                    <div class="skill-level">
+                        <div class="skill-progress" style="width: 85%"></div>
+                    </div>
+                </div>
+                <div class="skill-card">
+                    <i class="fa-solid fa-cloud"></i>
+                    <h3>DevOps</h3>
+                    <p>熟练配置云服务器，掌握Docker容器化部署，具备完整项目部署运维经验</p>
+                    <div class="skill-level">
+                        <div class="skill-progress" style="width: 80%"></div>
+                    </div>
+                </div>
+                <div class="skill-card">
+                    <i class="fa-solid fa-robot"></i>
+                    <h3>AIGC开发</h3>
+                    <p>具备AI应用开发经验，包括PPT智能转换、文档生成等，了解模型微调技术</p>
+                    <div class="skill-level">
+                        <div class="skill-progress" style="width: 75%"></div>
+                    </div>
+                </div>
+                <div class="skill-card">
+                    <i class="fa-brands fa-css3"></i>
+                    <h3>UI/UX开发</h3>
+                    <p>精通CSS和现代前端样式开发，能够实现响应式设计和优秀的用户体验</p>
+                    <div class="skill-level">
+                        <div class="skill-progress" style="width: 85%"></div>
+                    </div>
+                </div>
             </div>
         </section>
     </main>
